# profile

./: .gitignore  profile.md
Microsoft/PTC/News/pdf-translate-v1/crates/cli_tools/: Cargo.toml
Microsoft/PTC/News/pdf-translate-v1/crates/cli_tools/src/: main.rs
Microsoft/PTC/News/pdf-translate-v1/crates/pdf_core/: Cargo.toml
Microsoft/PTC/News/pdf-translate-v1/crates/pdf_render_plan/: Cargo.toml
Microsoft/PTC/News/pdf-translate-v1/crates/pdf_render_plan/src/: lib.rs
Microsoft/PTC/News/pdf-translate-v1/crates/server/: Cargo.toml
Microsoft/PTC/News/pdf-translate-v10/: .env.example  .gitignore  README.md  build.md  glossary.csv  install.md  pyproject.toml
Microsoft/PTC/News/pdf-translate-v10/input/: README.md
Microsoft/PTC/News/pdf-translate-v10/input/done/: README.md
Microsoft/PTC/News/pdf-translate-v10/input/failed/: README.md
Microsoft/PTC/News/pdf-translate-v10/input/ready/: README.md
Microsoft/PTC/News/pdf-translate-v10/output/: README.md
Microsoft/PTC/News/pdf-translate-v10/output/rejected/: README.md
Microsoft/PTC/News/pdf-translate-v10/output/validated/: README.md
Microsoft/PTC/News/pdf-translate-v10/src/pdf_translate_v10/: __init__.py  cli.py  config.py  encode.py  extract.py  jsonio.py  models.py  paths.py  pipeline.py  progress.py  qpdf.py  readable.py  rebuild.py  state_db.py  terms.py  translate.py  validation.py
Microsoft/PTC/News/pdf-translate-v10/src/pdf_translate_v10.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Microsoft/PTC/News/pdf-translate-v10/work/: README.md
Microsoft/PTC/News/pdf-translate-v3/crates/pdf_analysis/: Cargo.toml
Microsoft/PTC/News/pdf-translate-v3/crates/pdf_filters/: Cargo.toml
Microsoft/PTC/News/pdf-translate-v3/crates/pdf_incremental/: Cargo.toml
Microsoft/PTC/News/pdf-translate-v3/crates/pdf_writer/: Cargo.toml
Microsoft/PTC/News/pdf-translate-v4/: .env.example  .gitignore  Cargo.toml  INSTALL.md  README.md  TODO.md  package-lock.json  package.json  run-translate.sh
Microsoft/PTC/News/pdf-translate-v4/docs/: ARCHITECTURE.md  FILE-env.md  FILE-glossary-csv.md  FILE-pdf-engine.md  FILE-runtime-dirs.md  PIPELINE.md
Microsoft/PTC/News/pdf-translate-v4/src/: index.mjs  pipeline.mjs
Microsoft/PTC/News/pdf-translate-v4/src/glossary/: loader.mjs
Microsoft/PTC/News/pdf-translate-v4/src/pdf/: engine.mjs  pymupdf_engine.py
Microsoft/PTC/News/pdf-translate-v4/src/translate/: llm.mjs
Microsoft/PTC/News/pdf-translate-v4/src/util/: env.mjs  lang.mjs
Microsoft/PTC/News/pdf-translate-v9/: .gitignore  Cargo.toml  README.md  TODO.md  design.md  glossary.csv
Microsoft/PTC/News/pdf-translate-v9/crates/: README.md
Microsoft/PTC/News/pdf-translate-v9/crates/pdf_cli/: Cargo.toml  README.md
Microsoft/PTC/News/pdf-translate-v9/crates/pdf_cmap/: Cargo.toml  README.md
Microsoft/PTC/News/pdf-translate-v9/crates/pdf_core/: Cargo.toml  README.md
Microsoft/PTC/News/pdf-translate-v9/crates/pdf_models/: Cargo.toml  README.md
Microsoft/PTC/News/pdf-translate-v9/crates/pdf_qpdf/: Cargo.toml  README.md
Microsoft/PTC/News/pdf-translate-v9/crates/pdf_rebuild/: Cargo.toml  README.md
Microsoft/PTC/News/pdf-translate-v9/crates/pdf_reports/: Cargo.toml  README.md
Microsoft/PTC/News/pdf-translate-v9/crates/pdf_state_db/: Cargo.toml  README.md
Microsoft/PTC/News/pdf-translate-v9/crates/pdf_terms/: Cargo.toml  README.md
Microsoft/PTC/News/pdf-translate-v9/crates/pdf_text_state/: Cargo.toml  README.md
Microsoft/PTC/News/pdf-translate-v9/crates/pdf_translate_openai/: Cargo.toml  README.md
Microsoft/PTC/News/pdf-translate-v9/docs/: README.md
Microsoft/PTC/News/pdf-translate-v9/docs/architecture/: README.md
Microsoft/PTC/News/pdf-translate-v9/docs/database/: README.md
Microsoft/PTC/News/pdf-translate-v9/docs/json-state/: README.md
Microsoft/PTC/News/pdf-translate-v9/docs/openai/: README.md
Microsoft/PTC/News/pdf-translate-v9/docs/qpdf/: README.md
Microsoft/PTC/News/pdf-translate-v9/docs/rust/: README.md
Microsoft/PTC/News/pdf-translate-v9/docs/terms/: README.md
Microsoft/PTC/News/pdf-translate-v9/docs/validation/: README.md
Microsoft/PTC/News/pdf-translate-v9/input/: README.md
Microsoft/PTC/News/pdf-translate-v9/input/done/: README.md
Microsoft/PTC/News/pdf-translate-v9/input/failed/: README.md
Microsoft/PTC/News/pdf-translate-v9/input/ready/: README.md
Microsoft/PTC/News/pdf-translate-v9/output/: README.md
Microsoft/PTC/News/pdf-translate-v9/output/rejected/: README.md
Microsoft/PTC/News/pdf-translate-v9/output/reports/: README.md
Microsoft/PTC/News/pdf-translate-v9/output/validated/: README.md
Microsoft/PTC/News/pdf-translate-v9/src/: README.md
Microsoft/PTC/News/pdf-translate-v9/src/cmap/: README.md
Microsoft/PTC/News/pdf-translate-v9/src/content_parser/: README.md
Microsoft/PTC/News/pdf-translate-v9/src/models/: README.md
Microsoft/PTC/News/pdf-translate-v9/src/pdf_reader/: README.md
Microsoft/PTC/News/pdf-translate-v9/src/pipeline/: README.md
Microsoft/PTC/News/pdf-translate-v9/src/publish/: README.md
Microsoft/PTC/News/pdf-translate-v9/src/qpdf/: README.md
Microsoft/PTC/News/pdf-translate-v9/src/readable/: README.md
Microsoft/PTC/News/pdf-translate-v9/src/rebuild/: README.md
Microsoft/PTC/News/pdf-translate-v9/src/report/: README.md
Microsoft/PTC/News/pdf-translate-v9/src/state_store/: README.md
Microsoft/PTC/News/pdf-translate-v9/src/terms/: README.md
Microsoft/PTC/News/pdf-translate-v9/src/text_state/: README.md
Microsoft/PTC/News/pdf-translate-v9/src/translate/: README.md
Microsoft/PTC/News/pdf-translate-v9/tools/: README.md
Microsoft/PTC/News/pdf-translate-v9/tools/qpdf/: README.md
Microsoft/PTC/News/ppt-translate-v2/: .env.example  .gitignore  Dockerfile  README.md  glossary.csv  pyproject.toml
Microsoft/PTC/News/ppt-translate-v2/.devcontainer/: devcontainer.json
Microsoft/PTC/News/ppt-translate-v2/docs/: ARCHITECTURE.md
Microsoft/PTC/News/ppt-translate-v2/src/ppt_translate/: cli.py  config.py  pipeline.py
Microsoft/PTC/News/ppt-translate-v2/tests/: test_extract_apply_roundtrip.py
(+943 files in other folders)
