[project]
name = "ppt-translate"
version = "0.1.0"
description = "PPTX in-place translation pipeline (OOXML direct)"
requires-python = ">=3.12"
dependencies = [
    "lxml>=5.2",
    "openai>=1.40",
    "litellm>=1.50",
    "pydantic-settings>=2.5",
    "typer>=0.12",
    "structlog>=24.4",
    "rich>=13.8",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
ppt-translate = "ppt_translate.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ppt_translate"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
