[package]
name = "pdftr_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "pdftr"
path = "src/main.rs"

[dependencies]
pdf_core.workspace = true
pdf_reader.workspace = true
pdf_writer.workspace = true
pdf_filters.workspace = true
pdf_incremental = { workspace = true, features = ["serde"] }
pdf_analysis = { workspace = true, features = ["serde"] }
pdf_render_plan = { workspace = true, features = ["serde"] }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
