[package]
name = "pdf_writer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
pdf_core.workspace = true
pdf_filters.workspace = true
thiserror.workspace = true
ttf-parser.workspace = true
subsetter.workspace = true
